2002-11-20  Masatake YAMATO  <jet@gyve.org>

	* src/seltrans.c (sp_sel_trans_stamp): The order of
	selections is reversed before stamping.

	The bug was reported by Michel Schinz <Michel.Schinz@epfl.ch>.

2002-11-19  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/desktop.c (sp_desktop_prepare_shutdown): New method, allowing us nice
	cleanup before ::destroy is invoked
	(sp_dtw_desktop_shutdown): Prepare desktop for shutdown

	* src/sp-text.c (sp_text_is_empty): Treat unicode private plane as graphical

	* src/libnrtype/nr-type-ft2.c (nr_typeface_ft2_lookup): Use private plane
	direct index, if no unimap
	(nr_typeface_ft2_new): Set unimap flag according to whether we have
	unicode mapping table or not

2002-11-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in (FREETYPE_LIBS): Added direct freetype check

	* src/widgets/dash-selector.c (sp_dash_selector_menu_item_new): Use created
	GC, as widget is not mapped yet
	(sp_dash_selector_new): Load stroke definitions from preferences

2002-11-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sodipodi-ctrl.c (sp_ctrl_build_cache): Cleaned up bitmap build

2002-11-17  Masatake YAMATO  <jet@gyve.org>

	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Added small
	space between attribute name text field and set attribute 
	button.

2002-11-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Cleanup by MenTaLguY

	* src/widgets/sp-xmlview-attr-list.c (event_attr_changed): Clamping string
	width to 64[+3], thanks to MenTaLguY

2002-11-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.c (sp_canvas_motion): Get pointer if motion hints are requested

	* src/select-context.c (sp_select_context_item_handler): Use motion hints

	* src/dialogs/text-edit.c (sp_text_edit_dialog_read_selection): Kill annoying
	warning about position > length

	* src/style.h (SP_SCALE24_FROM_FLOAT): Use temporary (double) cast
	(SP_SCALE24_TO_FLOAT): Ditto
